--- a/SPAUPAInstaller/LoadingWindow.xaml
+++ b/SPAUPAInstaller/LoadingWindow.xaml
@@ -1,11 +1,13 @@
-﻿<Window x:Class="SPAUPAInstaller.Loading"
+﻿<Window x:Class="SPAUPAInstaller.LoadingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SPAUPAInstaller"
         mc:Ignorable="d"
-        Title="Loading" Height="200" Width="500">
+        x:Name="Window" Title="LoadingWindow" Height="200" Width="500"
+        Loaded="LoadingWindow_OnLoaded"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid>
         <Grid Margin="20">
             <Grid.RowDefinitions>
@@ -14,7 +16,7 @@
                 <RowDefinition Height="25"/>
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"
-                       Text="Loading..." />
+                       Text="{Binding Message, Mode=OneWay}" />
             <Grid Grid.Row="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -22,9 +24,9 @@
                     <RowDefinition Height="5"/>
                 </Grid.RowDefinitions>
                 <ProgressBar Grid.Row="0"
-                             Maximum="1" Value="0.7"/>
+                             Maximum="1" Value="{Binding CurrentProgress, Mode=OneWay}"/>
                 <ProgressBar Grid.Row="2"
-                             Maximum="1" Value="0.5"/>
+                             Maximum="1" Value="{Binding MainProgress, Mode=OneWay}"/>
             </Grid>
         </Grid>
     </Grid>
